[package]
name = "linuxc"
version = "0.1.0"
edition = "2024"
description = ""
authors = [ "minghu6 <a19678zy@163.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }


[[bin]]
name="linuxc"
path="bin/linuxc"

