[package]
name = "linuxc"
version = "0.1.0"
edition = "2024"
description = ""
authors = [ "minghu6 <a19678zy@163.com>" ]

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
osimodel = { path = "../osimodel", features = ["http"] }
ifstructs = "0.1.1"
ioctl = { version = "0.8", package = "ioctl-sys" }

# netlink
netlink-packet-route = "0.24"


# code genenration utils
derive_more = { version = "1.0", features = ["display", "error", "deref", "deref_mut"] }
int-enum = "1.2"
strum = { version = "0.27", features = ["derive"] }
m6tobytes = { path = "../m6coll/m6tobytes" }
m6io = { path = "../m6coll/m6io", features = ["rawbuf"]}


# semantics
nonempty = { version = "0.11" }


[dev-dependencies]
# cli
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# date
chrono = "0.4"

[[example]]
name="tcp_server_r0"
path="examples/tcp/tcp_server_r0.rs"
